--- a/Oxford Brookes Bus/Base.lproj/Main.storyboard
+++ b/Oxford Brookes Bus/Base.lproj/Main.storyboard
@@ -111,9 +111,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="93" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="HoU-9v-eoX">
                                 <rect key="frame" x="0.0" y="20" width="375" height="540"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="540" id="rac-aS-tD6"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" rowHeight="93" id="MCL-Cy-W8e" customClass="CustomRouteViewCell" customModule="Oxford_Brookes_Bus" customModuleProvider="target">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -157,8 +160,8 @@
                                     <outlet property="delegate" destination="454-R7-6vy" id="QO7-T2-DcH"/>
                                 </connections>
                             </tableView>
-                            <pageControl opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="2" translatesAutoresizingMaskIntoConstraints="NO" id="20i-1G-cCM">
-                                <rect key="frame" x="168" y="573" width="39" height="37"/>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="2" translatesAutoresizingMaskIntoConstraints="NO" id="20i-1G-cCM">
+                                <rect key="frame" x="168" y="607" width="39" height="37"/>
                                 <color key="pageIndicatorTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="currentPageIndicatorTintColor" red="0.0" green="0.0" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                             </pageControl>
@@ -166,10 +169,23 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="HoU-9v-eoX" secondAttribute="trailing" constant="-16" id="Icm-l0-xAI"/>
+                            <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="23" id="Jqm-YC-89D"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="top" secondItem="SEH-8j-C42" secondAttribute="topMargin" constant="20" id="KjN-bu-snh"/>
+                            <constraint firstItem="20i-1G-cCM" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="152" id="PQA-vt-teE"/>
                             <constraint firstAttribute="centerX" secondItem="20i-1G-cCM" secondAttribute="centerX" id="R0B-da-Vpc"/>
+                            <constraint firstItem="20i-1G-cCM" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="152" id="Wo6-2E-UUl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="20i-1G-cCM" secondAttribute="trailing" constant="152" id="cVd-1Y-9r3"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="20i-1G-cCM" secondAttribute="trailing" constant="152" id="j9N-6y-XCD"/>
                             <constraint firstItem="HoU-9v-eoX" firstAttribute="leading" secondItem="SEH-8j-C42" secondAttribute="leadingMargin" constant="-16" id="jeM-Nz-bZg"/>
+                            <constraint firstItem="56K-fL-H5C" firstAttribute="top" secondItem="20i-1G-cCM" secondAttribute="bottom" constant="57" id="nPZ-HF-Yga"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="PQA-vt-teE"/>
+                                <exclude reference="cVd-1Y-9r3"/>
+                                <exclude reference="nPZ-HF-Yga"/>
+                            </mask>
+                        </variation>
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
@@ -204,7 +220,7 @@
                                     <action selector="segmentChange:" destination="TqT-WR-H09" eventType="valueChanged" id="Tpx-nC-wXR"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4dW-Wr-RRz">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4dW-Wr-RRz">
                                 <rect key="frame" x="0.0" y="64" width="375" height="489"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -231,7 +247,7 @@
                             <constraint firstItem="3RJ-ye-nrk" firstAttribute="top" secondItem="apj-bx-Nmp" secondAttribute="bottom" constant="65" id="ODO-NK-E2R"/>
                             <constraint firstAttribute="centerX" secondItem="4dW-Wr-RRz" secondAttribute="centerX" id="Tnd-VC-9KV"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="YGt-8B-6z2"/>
-                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="CXg-6x-1Cp" secondAttribute="bottom" id="aOb-bQ-5c6"/>
+                            <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="CXg-6x-1Cp" secondAttribute="bottom" constant="44" id="aOb-bQ-5c6"/>
                             <constraint firstAttribute="centerX" secondItem="apj-bx-Nmp" secondAttribute="centerX" id="mIk-pa-FAY"/>
                             <constraint firstItem="4dW-Wr-RRz" firstAttribute="top" secondItem="QRA-cX-hRu" secondAttribute="topMargin" constant="64" id="sLI-z9-Hj1"/>
                             <constraint firstAttribute="trailingMargin" secondItem="4dW-Wr-RRz" secondAttribute="trailing" constant="-16" id="ynq-ym-ely"/>
